--- a/vue/index.html
+++ b/vue/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-  <title>广东益农信息公共服务平台</title>
+  <title>茂名空巢老人志愿者服务平台</title>
+  <link rel="shortcut icon" type="image/x-icon" href="./static/images/logo.png">
+  
 </head>
 <body>
   <div id="app"></div>
